--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- Author Meta -->
 		<meta name="author" content="Gabriel Souza">
 		<!-- Meta Description -->
-		<meta name="description" content="Portfolio - Guilherme Müller - Web Developer">
+		<meta name="description" content="Portfolio - Gabriel Souza - Web Developer">
 			<meta name="robots" content="index, follow">		<!-- Meta Keyword -->
 		<meta name="keywords" content="DEsenvolvedor front-end">
 		<!-- meta character set -->
