--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="banner-content col-lg-10">
 								<h5 class="text-uppercase">Desenvolvedor FUllStack</h5>
 								<h1>
-									Venha fazer sua ideia em négocio			
+									Transformer sua ideia em négocio			
 								</h1>
 								<a href="#" class="primary-btn text-uppercase">Explore Now</a>
 							</div>											
