--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 							<div class="banner-content col-lg-10">
 								<h5 class="text-uppercase">Desenvolvedor FUllStack</h5>
 								<h1>
-									Transformer sua ideia em négocio			
+									Transforme sua ideia em négocio			
 								</h1>
-								<a href="#" class="primary-btn text-uppercase">Explore Now</a>
+								<a href="#" class="primary-btn text-uppercase">Explore</a>
 							</div>											
 						</div>
 					</div>
